[metadata]
name = networkgx
version = 0.0.1
author = Ahmed Elshayeb
author_email = aelshayeb@jacobs-alumni.de
licence = MIT Licence
licence-file = LICENSE.txt
description = networkgx is an open source python library that has the tools needed to create interactive plots of networks.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
url = https://github.com/skyliquid22/networkgx
project_urls =
    Source = https://github.com/skyliquid22/networkgx
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Data Visualization
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
keywords =
    visualization
    interactive
    investment
    education

[options]
include_package_data = True
packages = find:
python_requires =
    ~=3.6
setup_requires =
    setuptools
install_requires =
    pandas==1.0.4
    numpy==1.18.5
    scikit-learn==0.23.1
    scipy==1.4.1
    statsmodels==0.11.1
    matplotlib==3.2.1

[options.packages.find]
package_dir =
    datascience
exclude =
    notebooks
    docs
